# ritz

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  RELEASING.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
benchmarks/: bench_corpus.py  bench_multimode.py  bench_tier12_diff.py  bench_vs_pdf_oxide.py  bench_vs_pymupdf.py  benchmark_report.md  leak_test.py  make_big_pdf.py  stress_phase5e.py
crates/mupdf/: Cargo.toml
crates/mupdf-sys/: Cargo.toml  bindings.rs  build.rs  wrapper.h
crates/mupdf-sys/native/: error_wrapper.c  error_wrapper.h  mupdf_extensions.c  mupdf_extensions.h
crates/mupdf-sys/src/: lib.rs
crates/mupdf/benches/: REPORT.md  bench.rs
crates/mupdf/src/: context.rs  document.rs  error.rs  geometry.rs  lib.rs  page.rs  pixmap.rs  stext.rs
crates/mupdf/tests/: integration_test.rs
crates/ritz/: Cargo.toml
crates/ritz/src/: batch.rs  document.rs  lib.rs  page.rs  pixmap.rs  value.rs
docs/: demo.ipynb
docx/: 00-onboarding-guide.md  01-architecture.md  02-longjmp-isolation.md  03-c-layer-flattening.md  04-memory-safety.md  05-image-extraction.md  06-parallel-and-batch.md  07-performance-analysis.md  08-comparison-with-pdf-oxide.md  09-acceleration-opportunities.md  10-tier1-tier2-results.md  11-phase5a-read-path.md  12-phase5b-annotations.md  13-phase5c-outline-writing.md  14-phase5d-resolve-names.md  15-phase5e-page-editing.md  16-phase6-stext-perf.md  17-optimization-dead-ends.md  README.md
patches/: 0001-fit_z-add-ritz-marker-comment.patch  README.md
plan/: 01-plan-v1.md  02-plan-v2.md  03-rennie-data-model.md  README.md
python/ritz/: __init__.py  __main__.py
python/tests/: test_ritz.py
tests/: integration_test.rs
