[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
# distribution name on PyPI: ritz-tool（"ritz" 已被占）
# import name 仍然是 ritz（见 module-name）
name = "ritz-tool"
description = "fitz, reforged in Rust — 高性能 PDF 处理库"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "AGPL-3.0-only" }
authors = [{ name = "justcodew" }]
# 版本从 Cargo.toml [workspace.package] 动态读取（单一来源）
dynamic = ["version"]
keywords = ["pdf", "mupdf", "pymupdf", "fitz"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
]

[project.urls]
Homepage = "https://github.com/justcodew/ritz"
Repository = "https://github.com/justcodew/ritz"
Changelog = "https://github.com/justcodew/ritz/blob/master/CHANGELOG.md"
Issues = "https://github.com/justcodew/ritz/issues"

[tool.maturin]
# Python 包名：ritz/；Rust cdylib 输出：_ritz.*
python-source = "python"
manifest-path = "crates/ritz/Cargo.toml"
module-name = "ritz._ritz"
features = ["pyo3/extension-module"]
