[package]
name = "mupdf"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Safe RAII wrapper around MuPDF"

[lib]
name = "mupdf"

[dependencies]
mupdf-sys = { path = "../mupdf-sys", version = "0.3.1" }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "bench"
harness = false
