[package]
name = "ritz"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "fitz, reforged in Rust — 高性能 PDF 处理库"

[lib]
name = "_ritz"
crate-type = ["cdylib", "rlib"]

[dependencies]
mupdf = { path = "../mupdf", version = "0.1.0" }
mupdf-sys = { path = "../mupdf-sys", version = "0.1.0" }
pyo3 = { version = "0.29", features = ["extension-module"] }
rayon = "1.10"
