[package]
name = "ritz"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "fitz, reforged in Rust — 高性能 PDF 处理库"

[lib]
name = "_ritz"
crate-type = ["cdylib", "rlib"]

[dependencies]
mupdf = { path = "../mupdf", version = "0.4.2" }
mupdf-sys = { path = "../mupdf-sys", version = "0.4.2" }
pyo3 = { version = "0.29", features = ["extension-module", "abi3-py39"] }
rayon = "1.10"
